# barvinok-rs

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yaml
barvinok/: Cargo.toml
barvinok-sys/: Cargo.toml  build.rs
barvinok-sys/misc/: cc-wrapper  cxx-wrapper
barvinok-sys/src/: lib.rs
barvinok/src/: aff.rs  constraint.rs  ident.rs  lib.rs  list.rs  local_space.rs  map.rs  mat.rs  point.rs  polynomial.rs  printer.rs  set.rs  space.rs  stat.rs  value.rs  vec.rs
